--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "angular": "^1.6.9",
     "express": "^4.16.3",
+    "express-generator": "^4.15.5",
+    "handlebars": "^4.0.11",
+    "jade": "^1.11.0",
     "mongoose": "^5.0.10",
     "underscore": "^1.8.3"
   }
