--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "homepage": "https://github.com/YuanSun/MortgageEstimationModel#readme",
   "dependencies": {
     "angular": "^1.6.9",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-generator": "^4.15.5",
     "handlebars": "^4.0.11",
     "jade": "^1.11.0",
     "mongoose": "^5.0.10",
+    "morgan": "^1.9.0",
+    "serve-favicon": "^2.4.5",
     "underscore": "^1.8.3"
   }
 }
