--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-generator": "^4.15.5",
+    "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11",
     "jade": "^1.11.0",
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
+    "nodemon": "^1.17.2",
     "serve-favicon": "^2.4.5",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "view-engine-handlebars": "^1.0.3"
   }
 }
