--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mortgageestimationmodel",
   "version": "1.0.0",
   "description": "A Model for Morgage Estimation",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/YuanSun/MortgageEstimationModel#readme",
   "dependencies": {
     "angular": "^1.6.9",
+    "angular-route": "^1.6.9",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-generator": "^4.15.5",
