--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-route": "^1.6.10",
     "cookie-parser": "^1.4.3",
     "d3": "^5.1.0",
+    "d3-tip": "^0.7.1",
     "express": "^4.16.3",
     "express-generator": "^4.15.5",
     "express-handlebars": "^3.0.0",
